--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     var map = new mapboxgl.Map({
       container: 'map', // container id
       style: 'mapbox://styles/mapbox/streets-v11', // YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
-      center: [-122.411, 37.785], // starting position [lng, lat]
+      center: [-77.0351775, 38.8867977], // starting position [lng, lat]
       zoom: 10,// starting zoom
       transformRequest: transformRequest
     });
