--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
     
     //YOUR TURN: add your Mapbox token
     mapboxgl.accessToken =
-    'pk.eyJ1Ijoic3kwOTI4IiwiYSI6ImNsOXEyb213OTB3NzAzb3A4NGozdW5ucjQifQ.YGLTPX9phjwJRolj_X1HwA';
-    
-    mapboxgl.accessToken = 'pk.eyJ1IjoibWFwYm94LWNvbW11bml0eSIsImEiOiJja2tkN21jcjAwMG51MnBxdHAxemdueGpzIn0.e0IzLkytGq4pcGGieP8KNA'; //Mapbox token 
+    'pk.eyJ1Ijoic3kwOTI4IiwiYSI6ImNsOXEyb213OTB3NzAzb3A4NGozdW5ucjQifQ.YGLTPX9phjwJRolj_X1HwA'; //Mapbox token 
     var map = new mapboxgl.Map({
       container: 'map', // container id
       style: 'mapbox://styles/mapbox/streets-v11', // YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
