--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             //Add the the layer to the map
             map.addLayer({
               'id': 'csvData',
-              'type': 'flower',
+              'type': 'circle',
               'source': {
                 'type': 'geojson',
                 'data': data
