--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               },
               'paint': {
                 'circle-radius': 6,
-                'circle-color': "pink"
+                'circle-color': "purple"
               }
             });
 
